    starpu_fxt_number_events_to_names.py to convert event keys to event names.
  * New STARPU_PER_WORKER perfmodel.
  * Add energy accounting in the simgrid mode: starpu_energy_use() and
    starpu_energy_used().
  * New function starpu_mpi_get_thread_cpuid() to know where is bound the MPI
    thread.
  * New function starpu_get_pu_os_index() to convert logical index of a PU to
    its OS index.

Small changes:
  * Use the S4U interface of Simgrid instead of xbt and MSG.
  * Add a synthetic energy efficiency testcase.

StarPU 1.3.4 (git revision xxx)
==============================================

Small features:
  * New environment variables STARPU_BUS_STATS_FILE and
    STARPU_WORKER_STATS_FILE to specify files in which to display
    statistics about data transfers and workers.
  * Add starpu_bcsr_filter_vertical_block filtering function.
  * Add starpu_interface_copy2d, 3d, and 4d to easily request data copies from
    data interfaces.
  * Move optimized cuda 2d copy from interfaces to new
    starpu_cuda_copy2d_async_sync and starpu_cuda_copy3d_async_sync, and use
    them from starpu_interface_copy2d and 3d.
  * New function starpu_task_watchdog_set_hook to specify a function
    to be called when the watchdog is raised
  * Add STARPU_LIMIT_CPU_NUMA_MEM environment variable.
  * Add STARPU_WORKERS_GETBIND environment variable.
  * Add STARPU_SCHED_SIMPLE_DECIDE_ALWAYS modular scheduler flag.
  * And STARPU_LIMIT_BANDWIDTH environment variable.
  * Add field starpu_conf::precedence_over_environment_variables to ignore
    environment variables when parameters are set directly in starpu_conf
  * Add starpu_data_get_coordinates_array
  * New STARPU_BACKOFF_MIN and STARPU_BACKOFF_MAX environment variables to the
    exponential backoff limits of the number of cycles to pause while drivers
    are spinning.
  * Add STARPU_DISPLAY_BINDINGS environment variable and
    starpu_display_bindings() function to display all bindings on the machine by
    calling hwloc-ps